# ragarium

./: .gitignore  GITHUB_REPOSITORY_COPY.md  MANIFEST.in  README.md  README_zh.md  RELEASE.md  RELEASE_NOTES_v0.4.0.md  pyproject.toml  quickstart.ipynb  quickstart.py  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: application.yaml  application.yaml.example  model_roles.yaml  model_roles.yaml.example
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  evalMetrics.js  styles.css  workflowNodes.js
frontend/src/components/: ui.jsx
frontend/src/pages/: ConfigPage.jsx  DataPage.jsx  EvaluationPage.jsx  HomePage.jsx  QueryPage.jsx  WorkflowPage.jsx
rag_eval/: __init__.py  app_config.py  query_generation.py  storage.py
rag_eval/api/: app.py  cli.py  context.py  errors.py  service.py  task_runs.py
rag_eval/api/routers/: __init__.py  evaluation.py  knowledge.py  runtime.py  workflows.py
rag_eval/embeddings/: factory.py
rag_eval/eval_engine/: __init__.py  engine.py  eval_result.py  metric_presets.py  ragas_eval.py
rag_eval/ingestion/: __init__.py  loaders.py  service.py
rag_eval/rag/: normal_rag.py
rag_eval/vector/: vector_builder.py  vector_store_manager.py
rag_eval/workflow/: __init__.py  engine.py
ragarium/: __init__.py  app_config.py  query_generation.py
ragarium/api/: app.py  cli.py  context.py  errors.py  schemas.py  service.py  task_runs.py
ragarium/api/routers/: evaluation.py  knowledge.py  runtime.py  workflows.py
ragarium/core/: interfaces.py  types.py
ragarium/dataset_tools/: __init__.py
ragarium/dataset_tools/cmrc2018/: __init__.py  chunking.py  loader.py  sampling.py
ragarium/embeddings/: factory.py
ragarium/eval_engine/: __init__.py  engine.py  eval_result.py  rag_batch_runner.py  ragas_eval.py
ragarium/ingestion/: browser_sessions.py  chunking.py  loaders.py  service.py
ragarium/rag/: __init__.py  normal_rag.py  runner.py
ragarium/vector/: vector_builder.py  vector_store_manager.py
ragarium/workflow/: engine.py
tests/: test_api.py  test_app_config.py  test_eval_presets.py  test_ingestion.py  test_query_generation.py  test_workflow.py
utils/: __init__.py  yaml_reader.py
