[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-scaffold"
version = "0.2.2"
description = "Local RAG evaluation product scaffold with FastAPI, React, SQLite, Chroma, and RAGAS."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "syy12335" },
]
keywords = [
  "rag",
  "evaluation",
  "ragas",
  "fastapi",
  "chroma",
  "workflow",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "chromadb>=0.5.3,<0.6.0",
  "dashscope>=1.24.9,<2.0.0",
  "datasets>=2.19.0,<3.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "langchain>=0.2.5,<0.3.0",
  "langchain-community>=0.2.5,<0.3.0",
  "langchain-core>=0.2.23,<0.3.0",
  "langchain-openai>=0.1.17,<0.2.0",
  "langchain-text-splitters>=0.2.1,<0.3.0",
  "langgraph>=0.1.1,<0.2.0",
  "numpy>=1.26.2,<2.0.0",
  "pandas>=2.1.4,<3.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "playwright>=1.44.0,<2.0.0",
  "pypdf>=4.3.1,<5.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "ragas>=0.1.11,<0.2.0",
  "requests>=2.32.3,<3.0.0",
  "streamlit>=1.36.0,<2.0.0",
  "tiktoken>=0.7.0,<1.0.0",
  "tqdm>=4.66.1,<5.0.0",
  "uvicorn[standard]>=0.30.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2,<9.0.0",
]

[project.urls]
Homepage = "https://github.com/syy12335/rag-eval-scaffold"
Repository = "https://github.com/syy12335/rag-eval-scaffold"
Issues = "https://github.com/syy12335/rag-eval-scaffold/issues"

[project.scripts]
rag-eval-api = "rag_eval.api.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["quickstart", "streamlit_app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_eval*", "utils*"]
exclude = ["tests*", "frontend*", "datasets*", "config*", "var*", "chroma_db*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
